--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "bootbot start",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +14,5 @@
     "config": "^1.21.0",
     "prettier": "^1.18.2"
   },
-  "devDependencies": {
-    "bootbot-cli": "^1.0.5"
-  }
+  "devDependencies": {}
 }
